SERVER-60268 Reintroduce disambiguationg sequence number